tests/should_succeed/function_and_var_same_name.jou
import "stdlib/io.jou"

def foo() -> None:
    printf("Foo!\n")

def bar() -> None:
    foo()

def main() -> int:
    foo = 123
    printf("%d\n", foo)  # Output: 123
    bar()  # Output: Foo!
    return 0
