tests/syntax_error/c_cast_int.jou
def foo() -> None:
    x = (int)123  # Error: Jou's cast syntax is 'value as int', not '(int)value'
